GNOME Bugzilla – Bug 763793
h264parse, h265parse: failure to parse downstream force-key-unit event
Last modified: 2016-04-14 17:42:52 UTC
The parser handles the downstream force-key-unit event incorrectly, it tries to parse it as an upstream force-key-unit event, does not check the return value, and then uses uninitialized memory in "all_headers" boolean variable.
Created attachment 324155 [details] [review] The fix
commit d8e681bb6317e1c26ca522e15836d13a6d9b14cb Author: Aleksander Wabik <awabik@opera.com> Date: Thu Mar 17 19:24:32 2016 +0000 h264parse, h265parse: fix handling of downstream force-key-unit events The parser handles the downstream force-key-unit event incorrectly, it tries to parse it as an upstream force-key-unit event, does not check the return value, and then uses uninitialized memory in "all_headers" boolean variable. https://bugzilla.gnome.org/show_bug.cgi?id=763793